# churn-predictor

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/churn_predictor/: __init__.py
src/churn_predictor/api/: __init__.py  main.py  router.py  schemas.py
src/churn_predictor/data/: __init__.py  loader.py  preprocessor.py
src/churn_predictor/features/: __init__.py  engineer.py
src/churn_predictor/models/: __init__.py  evaluator.py  trainer.py
tests/: conftest.py
tests/api/: test_router.py
tests/data/: test_loader.py  test_preprocessor.py
tests/features/: test_engineer.py
tests/models/: test_evaluator.py  test_trainer.py
